src/objects/ZuoraJob__c.object
<CustomObject>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportType__c</fullName>
        <description>The type of export created by Zuora</description>
        <label>ExportType</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_ID__c</fullName>
        <label>Export ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <label>File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Grouping__c</fullName>
        <label>Report Grouping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <description>Zuora Export items (API name is Zuora Job)</description>
    <label>Zuora Export</label>
    <nameField>
        <label>Zuora Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zuora Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_ID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>